--- a/style.css
+++ b/style.css
@@ -6,8 +6,8 @@ body
 }
 
 .container{
-    width:50%;
-    Margin:auto;
-    padding:20px;
+  margin-top: 20px;
+	margin-left: 200px;
+	margin-right: 200px;
 }
 
