--- a/style.css
+++ b/style.css
@@ -6,9 +6,7 @@ body
 }
 
 #container {
-	margin-top: 20px;
-	margin-left: 200px;
-	margin-right: 200px;
+	margin-top:auto;
 
 	padding: 10px 150px 10px 150px;
 
