--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body
 	padding: 10px 150px 10px 150px;
 
 	border-radius: 15px;
-	background-color: #eae2e2;
+	background-color: #dfdfdf;
 
 	text-align: left;
 }
