--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body
 .container {
 	margin:10%;
 
-	padding: 10px 150px 10px 150px;
+	padding:20px;
 
 	border-radius: 15px;
 	background-color: #dfdfdf;
