--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body
 	margin-bottom:20px;
 	margin-right:300px;
 	margin-left:300px;
+	padding:20px;
 
 	border-radius: 15px;
 	background-color: #dfdfdf;
